cmake_minimum_required(VERSION 3.16)
project(Unit_10)

set(CMAKE_CXX_STANDARD 14)

add_executable(10_1 10_1.cpp)
add_executable(10_2 10_2.cpp)
add_executable(10_3 10_3.cpp)
add_executable(10_6 10_6.cpp)
add_executable(10_7 10_7.cpp)
add_executable(10_9 10_9.cpp)
add_executable(10_12 10_12.cpp)
add_executable(10_13 10_13.cpp)
add_executable(10_14 10_14.cpp)
add_executable(10_15 10_15.cpp)
add_executable(10_16 10_16.cpp)
add_executable(10_17 10_17.cpp)
add_executable(10_18 10_18.cpp)
add_executable(10_20 10_20.cpp)
add_executable(10_21 10_21.cpp)
add_executable(10_22 10_22.cpp)
add_executable(10_24 10_24.cpp)
add_executable(10_25 10_25.cpp)