cmake_minimum_required(VERSION 3.16)
project(Unit_12)

set(CMAKE_CXX_STANDARD 14)

add_executable(Unit_12 main.cpp)

add_executable(12_2 12_2.cpp)
add_executable(12_6 12_6.cpp)
add_executable(12_7 12_7.cpp)
add_executable(12_10 12_10.cpp)
add_executable(12_13 12_13.cpp)
add_executable(12_14 12_14.cpp)
add_executable(12_15 12_15.cpp)
add_executable(12_16 12_16.cpp)