cmake_minimum_required(VERSION 3.16)
project(Unit_8)

set(CMAKE_CXX_STANDARD 14)

add_executable(Unit_8 main.cpp)
add_executable(8_2 8_2.cpp)
add_executable(8_4 8_4.cpp)
add_executable(8_5 8_5.cpp)
add_executable(8_6 8_6.cpp)
add_executable(8_7 8_7.cpp)
add_executable(8_9 8_9.cpp)
add_executable(8_10 8_10.cpp)
add_executable(8_13 8_13.cpp)