cmake_minimum_required(VERSION 3.16)
project(Unit_9)

set(CMAKE_CXX_STANDARD 14)


add_executable(9_13 9_13.cpp)
add_executable(9_14 9_14.cpp)
add_executable(9_18 9_18.cpp)
add_executable(9_20 9_20.cpp)
add_executable(9_24 9_24.cpp)
add_executable(9_26 9_26.cpp)
add_executable(9_38 9_38.cpp)
add_executable(9_47 9_47.cpp)
add_executable(9_49 9_49.cpp)
add_executable(9_50 9_50.cpp)
add_executable(9_52 9_52.cpp)
add_executable(9_51 9_51.cpp)